--- a/layout.css
+++ b/layout.css
@@ -128,6 +128,8 @@ footer,
     background-color: #ccc;
     min-width: 200px;
     max-width: 400px;
+    min-height: 200px;
+    max-height: 400px;
     padding: 20px;
     margin: 0 auto;
     text-transform: uppercase;
@@ -135,6 +137,8 @@ footer,
     font-family: Helvetica;
     font-size: 50px;
     color: #999;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 
 .dud {
