--- a/layout.css
+++ b/layout.css
@@ -124,9 +124,9 @@ footer,
 
 .container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    height: 100%; /* Ensure the container takes the full height */
+    height: 100vh; /* Ensure the container takes the full height */
 }
 
 .text {
@@ -142,6 +142,10 @@ footer,
     font-family: Helvetica;
     font-size: 50px;
     color: #999;
+}
+
+.text:hover::after {
+    content: attr(data-phrases);
 }
 
 .dud {
