--- a/layout.css
+++ b/layout.css
@@ -41,7 +41,7 @@ header::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("pics/Designer.jpeg") no-repeat 50% 50%;
+    background: url("pics/Designer.webp") no-repeat 50% 50%;
     background-size: cover;
     filter: blur(10px);
     z-index: -1;
